--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,59 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+@import url('https://fonts.googleapis.com/css?family=Merriweather:900i');
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: black;
+  height: 120px;
+  width: 100%;
+}
+
+.homelink {
+  color: #E18A07;
+  font-size: 27px;
+  font-family: 'Merriweather', serif;
+  margin-top: 75px;
+  margin-right: 30px;
+  text-decoration: none;
+  float: right;
+}
+
+.homelink:hover {
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.logo {
+  height: 105px;
+  width: 142px;
+  margin: 20px;
 }
 
-.App-intro {
-  font-size: large;
+@media only screen and (max-width: 450px) {
+    .App-header {
+      height: 70px;
+      margin: 0;
+    }
+
+    .logo {
+        height: 50px;
+        width: 87px;
+        margin: 10px;
+    }
+    .homelink {
+      font-size: 20px;
+      margin-top: 30px;
+      margin-right: 25px;
+    }
+    .ion-home {
+      display: none;
+    }
 }
 
-@keyframes App-logo-spin {
+
+
+/* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+} */
